--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,29 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      - name: Cache modules
-        id: cache-npm
-        uses: actions/cache@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: List the state of node modules
-        continue-on-error: true
-        run: npm list
+          node-version: "18"
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build website
+      - name: Build
         run: npm run build
 
       - name: Deploy
